--- a/Imputation_intro.html
+++ b/Imputation_intro.html
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 ## with apllications in R
 ### Aksel Thomsen (<a href="mailto:akt@dst.dk" class="email">akt@dst.dk</a>)
 ### Statistics Denmark
-### 2020/12/7
+### 2020/4/15 (original 2020/12/7)
 
 ---
 
@@ -451,16 +451,16 @@ lfs_imp %&gt;% anti_join(lfs, by = names(lfs_imp)) %&gt;% slice_sample(n=10)
 
 |  id| age|gender |region | employed| hours|
 |---:|---:|:------|:------|--------:|-----:|
-| 388|  33|M      |W      |        1|    40|
-| 258|  43|F      |W      |        1|    40|
-| 188|  54|M      |N      |        1|    40|
-| 447|  68|M      |W      |        1|    40|
-| 223|  31|M      |E      |        1|    22|
-| 437|  41|M      |S      |        1|    40|
-|  58|  65|M      |W      |        1|    34|
-| 419|  48|M      |S      |        1|    40|
+| 346|  53|F      |W      |        1|    36|
+| 180|  19|M      |E      |        1|    40|
 | 114|  86|F      |E      |        0|    NA|
-|  30|  21|M      |W      |        1|    39|
+| 279|  31|M      |N      |        1|    40|
+|  16|  18|F      |W      |        1|    40|
+|  93|  33|F      |S      |        1|    32|
+| 142|  55|M      |S      |        1|    40|
+| 315|  88|F      |E      |        0|    NA|
+|  31|  31|F      |S      |        1|    40|
+|  82|  85|M      |N      |        1|    40|
 
 ---
 
@@ -472,9 +472,9 @@ summary(lfs_imp)
 ```
 ##        id             age        gender  region     employed        hours      
 ##  Min.   :  1.0   Min.   :18.00   F:259   W:164   Min.   :0.00   Min.   :20.00  
-##  1st Qu.:125.8   1st Qu.:34.00   M:241   S:132   1st Qu.:0.00   1st Qu.:39.00  
+##  1st Qu.:125.8   1st Qu.:34.00   M:241   S:132   1st Qu.:0.00   1st Qu.:37.00  
 ##  Median :250.5   Median :47.00           N: 81   Median :1.00   Median :40.00  
-##  Mean   :250.5   Mean   :49.55           E:123   Mean   :0.67   Mean   :37.36  
+##  Mean   :250.5   Mean   :49.55           E:123   Mean   :0.67   Mean   :37.18  
 ##  3rd Qu.:375.2   3rd Qu.:65.00                   3rd Qu.:1.00   3rd Qu.:40.00  
 ##  Max.   :500.0   Max.   :90.00                   Max.   :1.00   Max.   :40.00  
 ##                                                                 NA's   :165
@@ -501,8 +501,6 @@ lfs_mf &lt;- lfs %&gt;%
 ##   missForest iteration 2 in progress...done!
 ##   missForest iteration 3 in progress...done!
 ##   missForest iteration 4 in progress...done!
-##   missForest iteration 5 in progress...done!
-##   missForest iteration 6 in progress...done!
 ```
 
 ```r
